# stripey

./: .dockerignore  .isort.cfg  README.md  __about__.py  build.sh  entrypoint.sh  publish.sh  pyproject.toml  setup.sh
src/happiness/utils/: exceptions.py  utils.py
src/happy/scripts/: stripey.py
src/happy/utils/: utils.py
